--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <reflect.version>0.9.11</reflect.version>
         <guava.version>29.0-jre</guava.version>
         <bytebuddy.version>1.10.20</bytebuddy.version>
+        <netty.version>4.1.51.Final</netty.version>
     </properties>
 
     <dependencyManagement>
@@ -86,6 +87,11 @@
                 <groupId>net.bytebuddy</groupId>
                 <artifactId>byte-buddy</artifactId>
                 <version>${bytebuddy.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
