--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>daiwei-rpc</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
+        <module>rpc-core</module>
     </modules>
     <packaging>pom</packaging>
 
