--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <springboot.version>2.4.3</springboot.version>
         <spring.version>5.2.2.RELEASE</spring.version>
         <lombok.version>1.18.18</lombok.version>
-        <log.version>1.2.17</log.version>
+        <log.version>1.7.30</log.version>
         <fastjson.version>1.2.70</fastjson.version>
         <cglib.version>3.2.4</cglib.version>
         <reflect.version>0.9.11</reflect.version>
@@ -41,9 +41,14 @@
                 <version>${cglib.version}</version>
             </dependency>
             <dependency>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
                 <version>${log.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>2.12.1</version>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
