--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>rpc-core</module>
+        <module>rpc-test-demo</module>
     </modules>
     <packaging>pom</packaging>
 
