--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,15 @@
         <spring.version>5.2.2.RELEASE</spring.version>
         <lombok.version>1.18.18</lombok.version>
         <log.version>1.7.30</log.version>
-        <fastjson.version>1.2.70</fastjson.version>
+        <log.core.version>2.12.1</log.core.version>
+        <log.log4j.verion>1.7.30</log.log4j.verion>
         <cglib.version>3.2.4</cglib.version>
         <reflect.version>0.9.11</reflect.version>
         <guava.version>29.0-jre</guava.version>
         <bytebuddy.version>1.10.20</bytebuddy.version>
         <netty.version>4.1.51.Final</netty.version>
         <hessian.version>4.0.63</hessian.version>
+        <zk.curator.version>5.1.0</zk.curator.version>
     </properties>
 
     <dependencyManagement>
@@ -50,7 +52,12 @@
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
-                <version>2.12.1</version>
+                <version>${log.core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${log.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -97,6 +104,18 @@
                 <groupId>com.caucho</groupId>
                 <artifactId>hessian</artifactId>
                 <version>${hessian.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.curator</groupId>
+                <artifactId>curator-client</artifactId>
+                <version>${zk.curator.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.curator</groupId>
+                <artifactId>curator-framework</artifactId>
+                <version>${zk.curator.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
