--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -49,6 +49,16 @@
             <version>1.7.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+        </dependency>
+
 
     </dependencies>
 
