--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -59,6 +59,10 @@
             <artifactId>curator-framework</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+        </dependency>
 
     </dependencies>
 
