add_sys_load_util

--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>curator-recipes</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.dblock</groupId>
+            <artifactId>oshi-core</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
