--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <netty.version>4.1.51.Final</netty.version>
         <hessian.version>4.0.63</hessian.version>
         <zk.curator.version>5.1.0</zk.curator.version>
+        <oshi.version>3.4.0</oshi.version>
     </properties>
 
     <dependencyManagement>
@@ -123,6 +124,13 @@
                 <artifactId>curator-recipes</artifactId>
                 <version>${zk.curator.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.github.dblock</groupId>
+                <artifactId>oshi-core</artifactId>
+                <version>${oshi.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
