--- a/rpc-test/rpc-test-demo/pom.xml
+++ b/rpc-test/rpc-test-demo/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>rpc-test</artifactId>
         <groupId>io.daiwei</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-beta</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,13 +20,13 @@
         <dependency>
             <groupId>io.daiwei</groupId>
             <artifactId>rpc-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0-beta</version>
         </dependency>
 
         <dependency>
             <groupId>io.daiwei</groupId>
             <artifactId>rpc-test-entity</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0-beta</version>
         </dependency>
     </dependencies>
 
